--- a/sample/AtomicCoordinate2Descriptor_Top.yml
+++ b/sample/AtomicCoordinate2Descriptor_Top.yml
@@ -1,7 +1,7 @@
 link:
 - nodename: AtomicDescriptor
   nodetype: parts
-  linktype: IsA
+  linktype: is-a
   link:
   - nodename: BehlerSymmetryFunction3bodyVector
   - nodename: BehlerSymmetryFunction2bodyVector
