--- a/sample/Crystal.yml
+++ b/sample/Crystal.yml
@@ -1,7 +1,7 @@
 link:
 - nodename: Crystal
   nodetype: parts
-  linktype: IsA
+  linktype: is-a
   link:
   - nodename: CrystalCandidates
     nodetype: parts
