--- a/sample/MaterialsList_CrystalCandidatesTaxo.yml
+++ b/sample/MaterialsList_CrystalCandidatesTaxo.yml
@@ -1,7 +1,7 @@
 link:
 - nodename: NewsetCrystal
   nodetype: parts
-  linktype: IsA
+  linktype: is-a
   link:
   - nodename: ParticleSwarm
   - nodename: GeneticAlgorithm
