--- a/sample/Group_FeatureSet.yml
+++ b/sample/Group_FeatureSet.yml
@@ -31,7 +31,7 @@ workflow:
         - outputname: FeatureGroupsDistanceThresholdAll
         - outputtype: parts
       - !!omap
-        - outputname: FeatureDendrogram
+        - outputname: FeatureDendrogram(Candidates)
         - outputtype: parts
     - group:
       - !!omap
@@ -48,5 +48,5 @@ workflow:
     - group:
       - !!omap
         - methodname: FeatureDistanceMatrixHierarchalClustering
-        - outputname: FeatureDendrogram
+        - outputname: FeatureDendrogram(Candidates)
         - outputtype: parts
