--- a/sample/Importance_ExhaustiveSearchDiagram.yml
+++ b/sample/Importance_ExhaustiveSearchDiagram.yml
@@ -13,8 +13,10 @@ workflow:
     - group:
       - !!omap
         - methodname: indicatorDiagram
-        - outputname: VisualizedUnprocessedImportance
+        - methodtype: method
+        - outputname: VisualizedImportance
         - outputtype: parts
+
   - blockname: weightdiagram
     order: workflow
     list:
@@ -27,5 +29,6 @@ workflow:
     - group:
       - !!omap
         - methodname: weightDiagram
-        - outputname: VisualizedUnprocessedImportance
+        - methodtype: method
+        - outputname: VisualizedImportance
         - outputtype: parts
