--- a/sample/Group_DistanceMatrix.yml
+++ b/sample/Group_DistanceMatrix.yml
@@ -6,9 +6,9 @@ workflow:
     list:
     - group:
       - !!omap
-        - methodname: genAllData
+        - methodname: genDescriptorOfAllData
         - methodtype: function
-        - outputname: AllData
+        - outputname: DescriptorOfAllData
         - outputtype: parts
     - group:
       - !!omap
@@ -20,9 +20,9 @@ workflow:
     list:
     - group:
       - !!omap
-        - methodname: genAllData
+        - methodname: genDescriptorOfAllData
         - methodtype: function
-        - outputname: AllData
+        - outputname: DescriptorOfAllData
         - outputtype: parts
     - group:
       - !!omap
@@ -34,9 +34,9 @@ workflow:
     list:
     - group:
       - !!omap
-        - methodname: genAllData
+        - methodname: genDescriptorOfAllData
         - methodtype: function
-        - outputname: AllData
+        - outputname: DescriptorOfAllData
         - outputtype: parts
     - group:
       - !!omap
@@ -48,9 +48,9 @@ workflow:
     list:
     - group:
       - !!omap
-        - methodname: genAllData
+        - methodname: genDescriptorOfAllData
         - methodtype: function
-        - outputname: AllData
+        - outputname: DescriptorOfAllData
         - outputtype: parts
     - group:
       - !!omap
