--- a/sample/Importance_RelevanceImportance.yml
+++ b/sample/Importance_RelevanceImportance.yml
@@ -8,7 +8,7 @@ workflow:
       - !!omap
         - methodname: generateBestOfAllModels
         - methodtype: function
-        - outputname: BestScoreOfAll
+        - outputname: BestScoreOfAllModels
         - outputtype: parts
       - !!omap
         - methodname: generateBestScoreExceptGroup
